2005-03-02  Andras Varga

	* omnetapp.cc: fix: RNGs were initialized with run number of the
	previous run

	* omnetapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()

2005-02-24  Andras Varga

	* cenvir.cc: fix: simple modules etc in dynamically loaded dlls/so's
	([General]/load-libs=, -l command-line option) didn't get registered

2005-02-18  Andras Varga

	* cenvir.cc: ev.printf() fixed: it printed the buffer pointer value 
	instead of the string itself. (char buf[20]; strcpy(buf,"hello");
	cout << buf; prints buf's address not "hello"!!!)

	* cenvir.cc: fixed crash caused by writing one char past the
	end of char buffer[1024] in cEnvir::gets().

2005-02-07  Andras Varga

	* cakaroarng.cc: fix: added missing #include

	* cinifile.cc: fix in cInifile::getEntriesWithPrefix(): first check
	for double (overlapping) entries, and make the first one win. This 
	fixes wrong priorities of rng mapping entries. [reported by Georg Lutz]

2005-01-10  Andras Varga

	* factored out platform dependencies to include/platdep

2005-01-03  Andras Varga

	* omnetapp.cc: scheduler's startRun() and endRun() methods didn't
	get called

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-16  Andras Varga

	* optimizations

	* removed ev.getDisplayString() and support for display strings in
	omnetpp.ini (section [DisplayStrings])

2004-12-10  Andras Varga

	* omnetapp.cc/.h: implemented getUniqueNumber()

2004-12-08  Andras Varga

	* omnetapp.cc/h, cenvir.cc: added ev.getParameterUseDefault() function.
	New ini file option:
	  <paramname>.use-default = yes
	If set, the given module parameter(s) will use the defaults specified
	in the NED file via the input() operator.

2004-11-29  Andras Varga

  	* on Mac OS/X, implement ftime() with gettimeofday() [patch from 
  	Michael Tuexen]

  	* platdep.cc: load-libs= omnetpp.ini option now adds plaform-specific
  	extension (.dll or .so) to library name

2004-11-23  ------ omnetpp-3.0b1 released ------
